Fixed: Don't wrap code blocks

--- a/css/custom.scss
+++ b/css/custom.scss
@@ -30,6 +30,7 @@ code {
   font-size: .9em;
   padding: 2px;
   line-height: $line-height-base + 2;
+  white-space: nowrap;
 }
 
 ul, ol {
